--- a/cr-pi-drivers-main/client/src/Components/Card/Card.css
+++ b/cr-pi-drivers-main/client/src/Components/Card/Card.css
@@ -1,48 +1,40 @@
-a {
-    text-decoration: none;
-  }
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 26vw;
-    height: 73vh;
-    margin: 10px;
-    padding: 10px;
-    background-color: #4e88fd;
-    background-image: url('./assets/fondo-card.jpg');
-    background-size: cover;
-    border-radius: 5px;
-    border: solid rgba(255,255,255,0.65) 1px;
-    box-shadow: 1px -1px 25px -5px rgba(255,255,255,0.65);
-    -webkit-box-shadow: 1px -1px 25px -5px rgba(255,255,255,0.65);
-    -moz-box-shadow: 1px -1px 25px -5px rgba(255,255,255,0.65);
-    transition: transform 0.3s ease;
-  }
-  
-  .card:hover {
-    transform: translateY(-5px);
-  }
-  
-  .cardImage {
-    width: 100%; 
-    height: 80%; 
-    object-fit: cover; 
-    object-position: top;
-    border-radius: 5px;
-  }
-  
-  .cardName {
-    font-size: 35px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: rgb(180, 131, 131);
-  }
-  
-  .cardTeams {
-    font-size: 22px;
-    color: #7e4a4a;
-  }
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: calc(100% / 3 - 20px); /* Ajusta el ancho para que se muestren 3 tarjetas por fila */
+  height: 200px; /* Ajusta la altura según sea necesario */
+  margin: 10px;
+  padding: 10px;
+  background-color: #808080; /* Color gris oscuro */
+  color: #000000; /* Color negro */
+  border-radius: 5px;
+  box-shadow: 1px -1px 25px -5px rgba(255,255,255,0.65);
+  transition: transform 0.3s ease;
+ }
+ 
+ .card:hover {
+  transform: translateY(-5px);
+ }
+ 
+ .cardImage {
+  width: 100%; 
+  height: 80%; 
+  object-fit: cover; 
+  object-position: top;
+  border-radius: 5px;
+ }
+ 
+ .cardName {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #000000; /* Color negro */
+ }
+ 
+ .cardTeams {
+  font-size: 16px;
+  color: #FF0000; /* Color rojo */
+ }
