--- a/cr-pi-drivers-main/client/src/Components/Cards/Cards.css
+++ b/cr-pi-drivers-main/client/src/Components/Cards/Cards.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #D3D3D3; /* Color gris claro */
+    background-color: #D3D3D3;
     padding: 20px;
+    overflow: hidden;
    }
