--- a/cr-pi-drivers-main/client/src/Views/Home/Home.css
+++ b/cr-pi-drivers-main/client/src/Views/Home/Home.css
@@ -1,48 +1,64 @@
-.homeContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: #D3D3D3; /* Color gris claro */
-    padding: 20px;
-   }
-   
-   .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: calc(100% / 3 - 20px); /* Ajusta el ancho para que se muestren 3 tarjetas por fila */
-    height: 200px; /* Ajusta la altura según sea necesario */
-    margin: 10px;
-    padding: 10px;
-    background-color: #808080; /* Color gris oscuro */
-    color: #000000; /* Color negro */
-    border-radius: 5px;
-    box-shadow: 1px -1px 25px -5px rgba(255,255,255,0.65);
-    transition: transform 0.3s ease;
-   }
-   
-   .card:hover {
-    transform: translateY(-5px);
-   }
-   
-   .cardImage {
-    width: 100%; 
-    height: 80%; 
-    object-fit: cover; 
-    object-position: top;
-    border-radius: 5px;
-   }
-   
-   .cardName {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #000000; /* Color negro */
-   }
-   
-   .cardTeams {
-    font-size: 16px;
-    color: #FF0000; /* Color rojo */
-   }
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: #af585878;
+  background-image: url('../../assets/fondo_home.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 83.2vh;
+}
+
+a{
+  margin-right: 0;
+}
+
+.cardsHome {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.paginationHome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px 0 10px;
+  padding: 15px 20px;
+  background: #fff;
+  border: solid rgb(123, 123, 123) 1px;
+  border-radius: 10px;
+}
+
+.buttonPaginationHome {
+  margin: 0 10px;
+  background-color: #fff;
+  color: #900;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: all 0.3s ease;
+  height: 40px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  text-shadow: 0px 0px 2px white;
+}
+
+.buttonPaginationHome:hover {
+  background-color: #900;
+  color: #fff;
+  box-shadow: none;
+}
+
+.spanPaginationHome {
+  margin: 0 10px;
+  padding: 8px;
+  border-radius: 100%;
+  font-size: 24px;
+  font-weight: 800;
+  color: #900;
+}
