--- a/cr-pi-drivers-main/client/src/Components/NavBar/NavBar.css
+++ b/cr-pi-drivers-main/client/src/Components/NavBar/NavBar.css
@@ -1,15 +1,12 @@
-a{
+a {
     text-decoration: none;
 }
 
 .navHeader {
-    background: #1a4291;
-    background: radial-gradient(circle farthest-corner at center center, #071534 0%, #470303 200%);
-    background: -webkit-radial-gradient(circle farthest-corner at center center, #071534 0%, #e48e2d 200%);
-    background: -moz-radial-gradient(circle farthest-corner at center center, #071534 0%, #c2b119 200%);
-    border-bottom: solid rgb(123, 123, 123) 1px;
-    padding: 30px;
-    height: 6vh;
+    background: radial-gradient(circle farthest-corner at center, #071534 0%, #470303 200%);
+    border-bottom: 1px solid rgb(123, 123, 123);
+    padding: 1rem;
+    min-height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,41 +19,32 @@ a{
     width: 95%;
 }
 
-.navLogo{
-    height: 100px;
-}
-
 .navButtons {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin-right: 20px;
+    gap: 1rem; /* Espaciado uniforme */
+}
+
+.navButtons button:first-child {
+    margin-right: auto; /* Empuja el primer botón hacia la izquierda */
 }
 
 .navButton {
-    margin-right: 20px;
-    background-color: #fff;
-    color: #900;
+    background-color: #E10600;
+    color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 0.5rem 1rem;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 1rem;
+    font-family: 'Arial', sans-serif;
+    font-weight: 600;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
-    height: 50px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    text-shadow: 0px 0px 2px white;
-    box-shadow: 0px 8px 15px #900;
-}
-
-.navButtonClose{
-    margin-right: 130px;
 }
 
 .navButton:hover {
-    background-color: #900;
-    color: #fff;
-    border: #fff;
+    background-color: #fff;
+    color: #E10600;
     box-shadow: none;
 }
