--- a/cr-pi-drivers-main/client/src/Views/Home/Home.css
+++ b/cr-pi-drivers-main/client/src/Views/Home/Home.css
@@ -11,10 +11,13 @@ a{
 }
 
 .cardsHome {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px; /* Mantiene el espacio entre tarjetas */
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .paginationHome {
