--- a/cr-pi-drivers-main/client/src/Views/Form/Create.css
+++ b/cr-pi-drivers-main/client/src/Views/Form/Create.css
@@ -9,7 +9,7 @@
   max-width: 500px; /* Limita el ancho del formulario */
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.9); /* Fondo semitransparente */
+  background: linear-gradient(135deg, #1a1a1a, #900000); /* Gradiente negro-rojo */
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Sombras para realce */
 }
 
@@ -30,7 +30,7 @@
   padding: 20px;
   margin: 50px auto;
   border-radius: 10px;
-  background-image: url('.fondo-card.jpg');
+  /* background-image: url('.fondo-card.jpg'); */
   background-size: cover;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1),
               1px -1px 25px -5px rgba(255, 255, 255, 0.65);
@@ -74,26 +74,25 @@
   flex-direction: column;
   align-items: stretch; /* Alinear campos e inputs */
   width: 100%;
-  background-image: url('./assets/fondo-card.jpg');
+  /* background-image: url('./assets/fondo-card.jpg'); */
 }
 
 /* Botón */
-.formButtom {
-  background-color: #060707;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-top: 20px;
-  cursor: pointer;
-  font-size: 18px;
-  transition: all 0.3s ease;
-  font-family: "Roboto", sans-serif;
-  text-shadow: 0px 0px 2px white;
+.formButton {
+  background: #634544;
+    color: #fff;
+    border: none;
+    padding: 0.8rem 1.2rem;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: "Orbitron", sans-serif;
+    transition: all 0.3s ease;
+    box-shadow: 0px 5px 15px rgba(255, 0, 0, 0.5);
 }
 
-.formButtom:hover {
-  background-color: #2fbeab;
+.formButton:hover {
+  background-color: #30030b;
 }
 
 /* Errores */
