--- a/cr-pi-drivers-main/client/src/Views/Form/Create.css
+++ b/cr-pi-drivers-main/client/src/Views/Form/Create.css
@@ -4,7 +4,11 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: #f0f0f0;
+  background-image: url('../../assets/fondo-card.jpg');
+  background-size: cover;
+  border: 3px solid rgb(195, 236, 45); /* Borde rojo para el formulario interno */
+  padding-top: 21vh; /* Igual a la altura de la barra de navegación */
+  box-sizing: border-box; /* Para incluir padding en el cálculo de altura */
 }
 
 .formContainer {
@@ -14,6 +18,7 @@
   background-color: white;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border: 3px solid blue; /* Borde azul para el contenedor externo */
 }
 
 .formTitle {
@@ -35,7 +40,7 @@
 .formLabel, .formLabelText {
   font-size: 18px;
   font-weight: bold;
-  color: #ffffff;
+  color: #d61616;
   margin: 10px 0;
   text-align: center;
 }
